--- a/index.html
+++ b/index.html
@@ -32,47 +32,82 @@
         <div class="weather">
           <img class="weather-img" src="./Images/coludy.svg" alt="cloudy" />
           <div class="weather-info">
-            <h1><span id="temperature">24</span>°C</h1>
-            <h3 class="weather-desc">Cloudy</h3>
+            <h1><span class="temperature"></span>°C</h1>
+            <h3 class="weather-desc"></h3>
           </div>
         </div>
       </main>
     </div>
     <section>
-      <div class="weather-card">
-        <button id="theme-btn">
-          <img src="./Images/theme.svg" alt="theme-btn" />
-        </button>
-        <div class="weather-card-header">
+      <button id="theme-btn">
+        <img src="./Images/theme.svg" alt="theme-btn" />
+      </button>
+      <div class="weather-card card">
+        <div class="card-header">
           <h3>Current Weather</h3>
-          <h4>
-            <time id="time">10:30 <span id="am-pm"></span>AM,</time> Washington
-          </h4>
+          <h4><span class="city"></span>,<span class="country"></span></h4>
         </div>
         <div class="card-cols">
           <div class="col-1">
             <img class="weather-img" src="./Images/coludy.svg" alt="cloudy" />
             <div class="card-weather-desc">
-              <h1><span id="temperature">24</span>°C</h1>
-              <h3 class="weather-desc">Cloudy</h3>
+              <h1><span class="temperature"></span>°C</h1>
+              <h3 class="weather-desc"></h3>
             </div>
           </div>
           <div class="col-2">
             <div class="info">
               <h3>Humidity</h3>
-              <h4>50%</h4>
+              <h4><span id="humidity"></span>%</h4>
             </div>
             <div class="info">
-              <h3>Wind</h3>
-              <h4>20 km/h</h4>
+              <h3>Wind Speed</h3>
+              <h4><span id="wind-speed"></span> meter/s</h4>
             </div>
             <div class="info">
               <h3>Pressure</h3>
-              <h4>123 pha</h4>
+              <h4><span id="pressure"></span> hpa</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="air-quality-card card">
+        <div class="card-header">
+          <h3>Air Quality</h3>
+          <h4><span class="city"></span>,<span class="country"></span></h4>
+        </div>
+        <div class="card-cols">
+          <div class="col-1">
+            <h1 id="aqi">1</h1>
+            <h3 id="aqi-desc">Good</h3>
+          </div>
+          <div class="col-2">
+            <div class="info">
+              <h3>Carbon Monoxide</h3>
+              <h4><span id="co"></span> μg/m3</h4>
+            </div>
+            <div class="info">
+              <h3>Nitrogen Monoxide</h3>
+              <h4><span id="no"></span> μg/m3</h4>
+            </div>
+            <div class="info">
+              <h3>Ozone</h3>
+              <h4><span id="ozone"></span> μg/m3</h4>
+            </div>
+            <div class="info">
+              <h3>Fine Particles Matter</h3>
+              <h4><span id="fpm"></span> μg/m3</h4>
             </div>
           </div>
         </div>
       </div>
     </section>
   </body>
+  <script>
+    const themeBtn = document.getElementById('theme-btn');
+
+    themeBtn.addEventListener('click', () => {
+      document.body.classList.toggle('dark');
+    });
+  </script>
 </html>
