Social Icons Added.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
             </div>
           </div>
         </div>
+        <div class="social-icons">
+          <a href="https://github.com/Aditya6101"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a href="https://twitter.com/AdityaK6101"
+            ><i class="fab fa-twitter"></i
+          ></a>
+        </div>
       </main>
     </div>
     <section>
