min-max temp desplyed correctlly

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             <h1><span class="temperature"></span>°C</h1>
             <h3 class="weather-desc"></h3>
             <div class="min-max-temp">
-              <h5>Min- <span class="temp-min">20</span><span>°C</span></h5>
-              <h5>Max- <span class="temp-max">40</span><span>°C</span></h5>
+              <h5>Min- <span class="temp-min"></span><span>°C</span></h5>
+              <h5>Max- <span class="temp-max"></span><span>°C</span></h5>
             </div>
           </div>
         </div>
-        <div class="social-icons">
+        iv class="social-icons">
           <a href="https://github.com/Aditya6101"
             ><i class="fab fa-github"></i
           ></a>
@@ -74,8 +74,8 @@
               <h1><span class="temperature"></span>°C</h1>
               <h3 class="weather-desc"></h3>
               <div class="min-max-temp">
-                <h5>Min- <span class="temp-min">20</span><span>°C</span></h5>
-                <h5>Max- <span class="temp-max">40</span><span>°C</span></h5>
+                <h5>Min- <span class="temp-min"></span><span>°C</span></h5>
+                <h5>Max- <span class="temp-max"></span><span>°C</span></h5>
               </div>
             </div>
           </div>
