--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
           </div>
         </div>
-        iv class="social-icons">
+        <div class="social-icons">
           <a href="https://github.com/Aditya6101"
             ><i class="fab fa-github"></i
           ></a>
