--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
           </button>
         </form>
         <div class="weather">
-          <!-- <img class="weather-img" src="./Images/coludy.svg" alt="cloudy" /> -->
-          <canvas class="weather-icon" width="128" height="128"></canvas>
+          <img id="weather-img" height="100px" width="100px" src="" alt="" />
           <div class="weather-info">
             <h1><span class="temperature"></span>°C</h1>
             <h3 class="weather-desc"></h3>
@@ -128,10 +127,10 @@
     </section>
   </body>
   <script>
-    const themeBtn = document.getElementById('theme-btn');
+    const themeBtn = document.getElementById("theme-btn");
 
-    themeBtn.addEventListener('click', () => {
-      document.body.classList.toggle('dark');
+    themeBtn.addEventListener("click", () => {
+      document.body.classList.toggle("dark");
     });
   </script>
   <!-- <script src="./js/skycons.js"></script> -->
