--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </button>
         </form>
         <div class="weather">
-          <img id="weather-img" height="100px" width="100px" src="" alt="" />
+          <img id="weather-img" src="" alt="wether-icon" />
           <div class="weather-info">
             <h1><span class="temperature"></span>°C</h1>
             <h3 class="weather-desc"></h3>
@@ -68,7 +68,6 @@
         </div>
         <div class="card-cols">
           <div class="col-1">
-            <!-- <canvas class="weather-icon" width="128" height="128"></canvas> -->
             <div class="card-weather-desc">
               <h1><span class="temperature"></span>°C</h1>
               <h3 class="weather-desc"></h3>
@@ -133,6 +132,5 @@
       document.body.classList.toggle("dark");
     });
   </script>
-  <!-- <script src="./js/skycons.js"></script> -->
   <script src="./js/app.js"></script>
 </html>
